kubernetes/core/harbor/networking/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
spec:
  hostnames:
  - harbor.cloud.danmanners.com
  parentRefs:
  - kind: Gateway
    group: gateway.networking.k8s.io
    name: gwapi
    namespace: default
    sectionName: https-cloud
  rules:
  # API Endpoints
  # - name: harbor-core
  #   backendRefs:
  #   - group: ''
  #     kind: Service
  #     name: harbor-core
  #     port: 80
  #     weight: 1
  #   matches:
  #   - path:
  #       type: PathPrefix
  #       value: /c/
  #   - path:
  #       type: PathPrefix
  #       value: /api/
  #   - path:
  #       type: PathPrefix
  #       value: /service/
  #   - path:
  #       type: PathPrefix
  #       value: /v2/
  #   - path:
  #       type: PathPrefix
  #       value: /chartrepo/
  #   timeouts:
  #     backendRequest: 0s
  #     request: 0s
  # Every Other endpoint
  - name: harbor
    backendRefs:
    - group: ''
      kind: Service
      name: harbor
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 0s
      request: 0s
